--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@types/aws-sdk": "^2.7.0",
     "@types/node": "^13.13.0",
+    "@types/uuid": "^7.0.2",
     "aws-sdk": "^2.658.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "uuid": "^7.0.3"
   }
 }
