--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --opts mocha.opts",
+    "test:watch": "mocha --opts mocha.opts --watch"
+    
+  },
+  "legacy-test": {
+    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register test/**/*.ts",
+    "test-dev": "nodemon --watch . --ext ts --exec \"mocha -r ts-node/register test/**/*.test.ts\""
   },
   "keywords": [],
   "author": "",
@@ -16,5 +22,13 @@
     "aws-sdk": "^2.658.0",
     "typescript": "^3.8.3",
     "uuid": "^7.0.3"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
+    "chai": "^4.2.0",
+    "mocha": "^7.1.1",
+    "nodemon": "^2.0.3",
+    "ts-node": "^8.9.0"
   }
 }
