--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --require ts-node/register test/**/*.ts",    
-    "test:watch": "nodemon --watch . --ext ts --exec \"mocha --require ts-node/register test/**/*.ts\""    
+    "test": "mocha --require ts-node/register test/**/*.ts",
+    "test:watch": "nodemon --watch . --ext ts --exec \"mocha --require ts-node/register test/**/*.ts\""
   },
   "keywords": [],
   "author": "",
@@ -21,9 +21,11 @@
   "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
+    "@types/sinon": "^9.0.0",
     "chai": "^4.2.0",
     "mocha": "^7.1.1",
     "nodemon": "^2.0.3",
+    "sinon": "^9.0.2",
     "ts-node": "^8.9.0"
   }
 }
